// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-string-throw не ошибки индекс теста: 0 1`] = `Array []`;

exports[`no-string-throw не ошибки индекс теста: 1 1`] = `Array []`;

exports[`no-string-throw не ошибки индекс теста: 2 1`] = `Array []`;

exports[`no-string-throw не ошибки индекс теста: 3 1`] = `Array []`;

exports[`no-string-throw не ошибки индекс теста: 4 1`] = `Array []`;

exports[`no-string-throw не ошибки индекс теста: 5 1`] = `Array []`;

exports[`no-string-throw не ошибки индекс теста: 6 1`] = `Array []`;

exports[`no-string-throw не ошибки индекс теста: 7 1`] = `Array []`;

exports[`no-string-throw ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 7,
    "endColumn": 14,
    "endLine": 1,
    "line": 1,
    "message": "Expected an error object to be thrown.",
    "messageId": "object",
    "nodeType": "Literal",
    "ruleId": "@typescript-eslint/no-throw-literal",
    "severity": 2,
  },
]
`;

exports[`no-string-throw ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 7,
    "endColumn": 8,
    "endLine": 1,
    "line": 1,
    "message": "Expected an error object to be thrown.",
    "messageId": "object",
    "nodeType": "Literal",
    "ruleId": "@typescript-eslint/no-throw-literal",
    "severity": 2,
  },
]
`;

exports[`no-string-throw ошибки индекс теста: 2 1`] = `
Array [
  Object {
    "column": 7,
    "endColumn": 16,
    "endLine": 1,
    "line": 1,
    "message": "Do not throw undefined.",
    "messageId": "undef",
    "nodeType": "Identifier",
    "ruleId": "@typescript-eslint/no-throw-literal",
    "severity": 2,
  },
]
`;

exports[`no-string-throw ошибки индекс теста: 3 1`] = `
Array [
  Object {
    "column": 7,
    "endColumn": 11,
    "endLine": 1,
    "line": 1,
    "message": "Expected an error object to be thrown.",
    "messageId": "object",
    "nodeType": "Literal",
    "ruleId": "@typescript-eslint/no-throw-literal",
    "severity": 2,
  },
]
`;

exports[`no-string-throw ошибки индекс теста: 4 1`] = `
Array [
  Object {
    "column": 7,
    "endColumn": 18,
    "endLine": 2,
    "line": 2,
    "message": "Expected an error object to be thrown.",
    "messageId": "object",
    "nodeType": "BinaryExpression",
    "ruleId": "@typescript-eslint/no-throw-literal",
    "severity": 2,
  },
]
`;

exports[`no-string-throw ошибки индекс теста: 5 1`] = `
Array [
  Object {
    "column": 7,
    "endColumn": 15,
    "endLine": 2,
    "line": 2,
    "message": "Expected an error object to be thrown.",
    "messageId": "object",
    "nodeType": "TemplateLiteral",
    "ruleId": "@typescript-eslint/no-throw-literal",
    "severity": 2,
  },
]
`;

exports[`no-string-throw ошибки индекс теста: 6 1`] = `
Array [
  Object {
    "column": 7,
    "endColumn": 14,
    "endLine": 4,
    "line": 4,
    "message": "Expected an error object to be thrown.",
    "messageId": "object",
    "nodeType": "MemberExpression",
    "ruleId": "@typescript-eslint/no-throw-literal",
    "severity": 2,
  },
]
`;
